--- a/styles0.css
+++ b/styles0.css
@@ -137,7 +137,7 @@ footer{
     background-color: #F63232;
  }
  /*responsive styles*/
- @media screen and (max-widht: 1400px) {
+ @media screen and (max-width: 1400px) {
 
     .banner .welcome h2{
         font-size: 60px;
@@ -147,14 +147,14 @@ footer{
     }
  }
 
- @media screen and (max-widht: 960px) {
+ @media screen and (max-width: 960px) {
 
     .banner .welcome h2{
         font-size: 40px;
     }
  }
  
- @media screen and (max-widht: 700px) {
+ @media screen and (max-width: 700px) {
 
     .banner .welcome {
         position: relative;
@@ -177,7 +177,7 @@ footer{
     }
  }
 
- @media screen and (max-widht: 560px) {
+ @media screen and (max-width: 560px) {
 
     nav li{
         font-size: 20px;
